--- a/myapp/views/index.hbs
+++ b/myapp/views/index.hbs
@@ -222,10 +222,16 @@
                             networking.
                         </p>
                         <div class="mt-8 flex flex-wrap justify-center gap-4 fade-in-empowering" id="dive-button">
-                            <a class="bg-green-500 text-white lg:text-xl sm:text-l font-medium px-3 py-1 rounded shadow"
-                                href="#next">
-                                Dive In!
-                            </a>
+                            <div class="relative inline-flex  group">
+        <div
+            class="absolute transitiona-all duration-1000 opacity-70 -inset-px bg-gradient-to-r from-[#44BCFF] via-[#FF44EC] to-[#FF675E] rounded-xl blur-lg group-hover:opacity-100 group-hover:-inset-1 group-hover:duration-200 animate-tilt">
+        </div>
+        <a href="#next" title="Move down"
+            class="relative inline-flex items-center justify-center px-3 py-3 text-lg font-bold text-white transition-all duration-200 bg-transparent font-pj rounded-3xl focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-900"
+            role="button"><i class="fas fa-arrow-down"></i>
+
+        </a>
+    </div>
                         </div>
 
                     </div>
