--- a/myapp/views/index.hbs
+++ b/myapp/views/index.hbs
@@ -166,6 +166,7 @@
 
 <body class="bg-gray-900">
 
+
     <nav class="w-full bg-transparent h-fit overflow-hidden fixed top-0 left-0 z-50">
         <div class="py-4 lg:px-8 px-4 max-w-[4120px] h-16 mx-auto text-white flex items-center justify-between">
             <div class="lg:w-1/2">
@@ -207,6 +208,7 @@
             <a href="/about">ABOUT US</a>
         </div>
     </nav>
+
     <main>
         <section class="bg-gray-900 text-white" id="ind">
             <div class="relative h-screen bg-cover bg-center"
@@ -223,15 +225,15 @@
                         </p>
                         <div class="mt-8 flex flex-wrap justify-center gap-4 fade-in-empowering" id="dive-button">
                             <div class="relative inline-flex  group">
-        <div
-            class="absolute transitiona-all duration-1000 opacity-70 -inset-px bg-gradient-to-r from-[#44BCFF] via-[#FF44EC] to-[#FF675E] rounded-xl blur-lg group-hover:opacity-100 group-hover:-inset-1 group-hover:duration-200 animate-tilt">
-        </div>
-        <a href="#next" title="Move down"
-            class="relative inline-flex items-center justify-center px-3 py-3 text-lg font-bold text-white transition-all duration-200 bg-transparent font-pj rounded-3xl focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-900"
-            role="button"><i class="fas fa-arrow-down"></i>
+                                <div
+                                    class="absolute transitiona-all duration-1000 opacity-70 -inset-px bg-gradient-to-r from-[#44BCFF] via-[#FF44EC] to-[#FF675E] rounded-xl blur-lg group-hover:opacity-100 group-hover:-inset-1 group-hover:duration-200 animate-tilt">
+                                </div>
+                                <a href="#next" title="Move down"
+                                    class="relative inline-flex items-center justify-center px-3 py-3 text-lg font-bold text-white transition-all duration-200 bg-transparent font-pj rounded-3xl focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-900"
+                                    role="button"><i class="fas fa-arrow-down"></i>
 
-        </a>
-    </div>
+                                </a>
+                            </div>
                         </div>
 
                     </div>
@@ -349,10 +351,13 @@
                             <span class="text-white">init</span>()<br><span class="text-white">ASSOCIATION</span>
                         </h1>
                         </p>
-                        <p class="mt-[18px] text-[15px] font-normal text-white/[80%]">The Student Association of the Department of Information Technology at Amal Jyothi College of
-                    Engineering fosters innovation, collaboration, and technical excellence among students. It aims to
-                    provide opportunities for skill development, leadership, and community engagement in the field of
-                    IT.</p>
+                        <p class="mt-[18px] text-[15px] font-normal text-white/[80%]">The Student Association of the
+                            Department of Information Technology at Amal Jyothi College of
+                            Engineering fosters innovation, collaboration, and technical excellence among students. It
+                            aims to
+                            provide opportunities for skill development, leadership, and community engagement in the
+                            field of
+                            IT.</p>
 
                     </div>
                     <div class="md:w-[316px] ">
