--- a/myapp/views/eventupdate.hbs
+++ b/myapp/views/eventupdate.hbs
@@ -137,7 +137,7 @@
                     <h5 class="card-title">Update Event</h5>
                 </div>
                 <div class="card-body">
-                    <form action="/admin/eventManagement/updateEvent" method="post" enctype="multipart/form-data">
+                    <form action="/admin/eventManagement/updateEvent/{{event._id}}" method="post" enctype="multipart/form-data">
                         <div class="mb-3">
                             <label for="eventTitle" class="form-label">Event Title</label>
                             <input type="text" class="form-control" id="eventTitle" placeholder="Enter event title"
@@ -187,7 +187,7 @@
                             <label for="eventImage" class="form-label">Event Image</label>
                             <input type="file" class="form-control" id="eventImage" name="image">
                         </div>
-                        <button type="submit" class="btn btn-primary">Add Event</button>
+                        <button type="submit" class="btn btn-primary">Update Event</button>
                     </form>
                 </div>
             </div>
