--- a/myapp/views/index.hbs
+++ b/myapp/views/index.hbs
@@ -284,7 +284,7 @@
                     <div class="w-full sm:w-8/12 mb-10">
                         <div class="container mx-auto h-full sm:p-10 flex flex-col justify-center">
                             <nav class="flex px-4 justify-between items-center">
-                                <div class="lg:text-4xl text-2xl font-bold sm:mt-10 lg:mt-0">
+                                <div class="lg:text-4xl text-2xl font-bold mt-10 lg:mt-5">
                                     Networking Events<span class="text-green-700">.</span>
                                 </div>
                                 <div>
