--- a/myapp/views/about.hbs
+++ b/myapp/views/about.hbs
@@ -275,10 +275,10 @@
         <div class="px-4 py-16 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8 lg:py-20 ">
             <div class="relative max-w-2xl sm:mx-auto sm:max-w-xl md:max-w-2xl sm:text-center">
                 <h2
-                    class="mb-6 font-sans text-3xl text-center font-bold tracking-tight text-white sm:text-4xl sm:leading-none">
+                    class="mb-6 font-sans text-3xl text-center font-bold tracking-tight text-white sm:text-4xl sm:leading-none fade-in">
                     About Us
                 </h2>
-                <p class="mb-6 text-base text-indigo-200 md:text-lg">
+                <p class="mb-6 text-base text-indigo-200 md:text-lg fade-in">
                     The Student Association of the Department of Information Technology at Amal Jyothi College of
                     Engineering fosters innovation, collaboration, and technical excellence among students. It aims to
                     provide opportunities for skill development, leadership, and community engagement in the field of
@@ -296,16 +296,16 @@
 
                     <div>
                         <div>
-                            <span class="flex h-12 w-12 items-center justify-center rounded-xl bg-pink-500">
+                            <span class="flex h-12 w-12 items-center justify-center rounded-xl bg-pink-500 fade-in">
                                 <i class="fas fa-bullseye"></i>
                             </span>
                         </div>
 
                         <div class="mt-6">
-                            <h2 class="text-3xl font-bold tracking-tight text-white">
+                            <h2 class="text-3xl font-bold tracking-tight text-white fade-in">
                                 Mission:
                             </h2>
-                            <p class="mt-4 text-lg text-gray-300">
+                            <p class="mt-4 text-lg text-gray-300 fade-in">
                                 To empower students by fostering innovation, collaboration, and technical excellence in
                                 the field of Information Technology. Through hands-on learning, community engagement,
                                 and leadership opportunities, we aim to create a supportive ecosystem that nurtures
@@ -318,7 +318,7 @@
                     </div>
                 </div>
                 <div class="mt-12 sm:mt-16 lg:mt-0">
-                    <div class="-mr-48 pl-6 md:-mr-16 lg:relative lg:m-0 lg:h-full lg:px-0">
+                    <div class="-mr-48 pl-6 md:-mr-16 lg:relative lg:m-0 lg:h-full lg:px-0 fade-in">
                         <img loading="lazy" width="647" height="486"
                             class="w-full rounded-xl shadow-2xl ring-1 ring-black ring-opacity-5 lg:absolute lg:left-0 lg:h-full lg:w-auto lg:max-w-none"
                             style="color:transparent" src="/images/mision.jpeg">
@@ -334,16 +334,16 @@
                 <div class="mx-auto max-w-xl px-6 lg:mx-0 lg:max-w-none lg:py-16 lg:px-0 lg:col-start-2">
                     <div>
                         <div>
-                            <span class="flex h-12 w-12 items-center justify-center rounded-xl bg-pink-500">
+                            <span class="flex h-12 w-12 items-center justify-center rounded-xl bg-pink-500 fade-in">
                                 <i class="fas fa-eye"></i>
 
                             </span>
                         </div>
                         <div class="mt-6">
-                            <h2 class="text-3xl font-bold tracking-tight text-white">
+                            <h2 class="text-3xl font-bold tracking-tight text-white fade-in">
                                 Vision:
                             </h2>
-                            <p class="mt-4 text-lg text-gray-300">
+                            <p class="mt-4 text-lg text-gray-300 fade-in">
                                 To be a dynamic and inclusive student body that drives technological advancements,
                                 inspiring future leaders and innovators in Information Technology, while contributing to
                                 the local and global tech community. We strive to create a culture of continuous
@@ -354,7 +354,7 @@
                     </div>
                 </div>
                 <div class="mt-12 sm:mt-16 lg:mt-0">
-                    <div class="-ml-48 pr-6 md:-ml-16 lg:relative lg:m-0 lg:h-full lg:px-0">
+                    <div class="-ml-48 pr-6 md:-ml-16 lg:relative lg:m-0 lg:h-full lg:px-0 fade-in">
                         <img alt="Inbox user interface" loading="lazy" width="647" height="486"
                             class="w-full rounded-xl shadow-xl ring-1 ring-black ring-opacity-5 lg:absolute lg:right-0 lg:h-full lg:w-auto lg:max-w-none"
                             style="color:transparent" src="/images/vision.jpeg">
@@ -371,11 +371,11 @@
 
 
             <div class="relative mx-auto max-w-5xl text-center">
-                <span class="text-gray-400 my-3 flex items-center justify-center font-medium uppercase tracking-wider">
+                <span class="text-gray-400 my-3 flex items-center justify-center font-medium uppercase tracking-wider fade-in">
                     What we foster
                 </span>
                 <h2
-                    class="block w-full bg-gradient-to-b from-white to-gray-400 bg-clip-text font-bold text-transparent text-3xl sm:text-4xl">
+                    class="block w-full bg-gradient-to-b from-white to-gray-400 bg-clip-text font-bold text-transparent text-3xl sm:text-4xl fade-in">
                     Core Values
                 </h2>
 
@@ -388,31 +388,31 @@
                         style="background-image: linear-gradient(rgb(80, 70, 229) 0%, rgb(43, 49, 203) 100%); border-color: rgb(93, 79, 240);">
                         <i class="fas fa-lightbulb"></i>
                     </div>
-                    <h3 class="mt-6 text-gray-400">Innovation</h3>
-                    <p class="my-4 mb-0 font-normal leading-relaxed tracking-wide text-gray-400"> Encouraging creative
+                    <h3 class="mt-6 text-gray-400 fade-in">Innovation</h3>
+                    <p class="my-4 mb-0 font-normal leading-relaxed tracking-wide text-gray-400 fade-in"> Encouraging creative
                         problem-solving and forward-thinking approaches to technology. </p>
                 </div>
 
 
                 <div class="rounded-md border border-neutral-800 bg-neutral-900/50 p-8 text-center shadow">
-                    <div class="button-text mx-auto flex h-12 w-12 items-center justify-center rounded-md border "
+                    <div class="button-text mx-auto flex h-12 w-12 items-center justify-center rounded-md border fade-in"
                         style="background-image: linear-gradient(rgb(80, 70, 229) 0%, rgb(43, 49, 203) 100%); border-color: rgb(93, 79, 240);">
                         <i class="fas fa-users"></i>
                     </div>
                     <h3 class="mt-6 text-gray-400">Collaboration</h3>
-                    <p class="my-4 mb-0 font-normal leading-relaxed tracking-wide text-gray-400">Fostering teamwork and
+                    <p class="my-4 mb-0 font-normal leading-relaxed tracking-wide text-gray-400 fade-in">Fostering teamwork and
                         partnerships within the student community and industry.
                     </p>
                 </div>
 
 
                 <div class="rounded-md border border-neutral-800 bg-neutral-900/50 p-8 text-center shadow">
-                    <div class="button-text mx-auto flex h-12 w-12 items-center justify-center rounded-md border "
+                    <div class="button-text mx-auto flex h-12 w-12 items-center justify-center rounded-md border fade-in"
                         style="background-image: linear-gradient(rgb(80, 70, 229) 0%, rgb(43, 49, 203) 100%); border-color: rgb(93, 79, 240);">
                         <i class="fas fa-award"></i>
                     </div>
-                    <h3 class="mt-6 text-gray-400">Excellence</h3>
-                    <p class="my-4 mb-0 font-normal leading-relaxed tracking-wide text-gray-400">
+                    <h3 class="mt-6 text-gray-400 fade-in">Excellence</h3>
+                    <p class="my-4 mb-0 font-normal leading-relaxed tracking-wide text-gray-400 fade-in">
                         Striving for high standards in academic and extracurricular pursuits.
                     </p>
                 </div>
@@ -426,11 +426,11 @@
                 <div class="flex flex-col justify-between sm:px-[18px] md:flex-row md:px-10">
                     <div class="md:w-[316px] ">
                         <p class="text-[18px] font-medium text-white">
-                        <h1 class="text-green-500 font-extrabold">
-                            <span class="text-white">init</span>()<br><span class="text-white">ASSOCIATION</span>
+                        <h1 class="text-green-500 font-extrabold fade-in">
+                            <span class="text-white ">init</span>()<br><span class="text-white">ASSOCIATION</span>
                         </h1>
                         </p>
-                        <p class="mt-[18px] text-[15px] font-normal text-white/[80%]">The Student Association of the
+                        <p class="mt-[18px] text-[15px] font-normal text-white/[80%] fade-in">The Student Association of the
                             Department of Information Technology at Amal Jyothi College of
                             Engineering fosters innovation, collaboration, and technical excellence among students. It
                             aims
@@ -443,7 +443,7 @@
                     </div>
                     <div class="md:w-[316px] ">
                         <div class="mt-[23px] flex">
-                            <div class="flex h-[38px] w-[38px] items-center justify-center rounded-[75%]">
+                            <div class="flex h-[38px] w-[38px] items-center justify-center rounded-[75%] fade-in">
                                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path
@@ -451,14 +451,14 @@
                                         fill="white"></path>
                                 </svg>
                             </div>
-                            <div class="ml-[18px]">
+                            <div class="ml-[18px] fade-in">
                                 <a href="tel:+911800123444" class="font-Inter text-[14px] font-medium text-white">+91
                                     1800123444</a>
 
                             </div>
                         </div>
                         <div class="mt-[23px] flex">
-                            <div class="flex h-[38px] w-[38px] items-center justify-center rounded-[75%]">
+                            <div class="flex h-[38px] w-[38px] items-center justify-center rounded-[75%] fade-in">
                                 <svg width="20" height="15" viewBox="0 0 20 15" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path
@@ -466,13 +466,13 @@
                                         fill="white"></path>
                                 </svg>
                             </div>
-                            <div class="ml-[18px]">
+                            <div class="ml-[18px] fade-in">
                                 <a href="mailto:help@lorem.com"
                                     class="font-Inter text-[14px] font-medium text-[#fff]">help@init.com</a>
 
                             </div>
                         </div>
-                        <div class="mt-[23px] flex">
+                        <div class="mt-[23px] flex fade-in">
                             <div class="flex h-[38px] w-[38px] items-center justify-center rounded-[75%]">
                                 <svg width="18" height="21" viewBox="0 0 18 21" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
@@ -491,7 +491,7 @@
                         </div>
                     </div>
                     <div
-                        class="mt-6 flex w-full flex-col justify-between text-white sm:flex-row md:mt-0 md:max-w-[341px] ml-15">
+                        class="mt-6 flex w-full flex-col justify-between text-white sm:flex-row md:mt-0 md:max-w-[341px] ml-15 fade-in">
                         <div class="">
                             <p class="text-deutziawhite font-inter text-[18px] font-medium leading-normal">Pages</p>
                             <ul>
@@ -510,7 +510,7 @@
 
                             </ul>
                         </div>
-                        <div class="mt-6 flex flex-col gap-4 sm:mt-0">
+                        <div class="mt-6 flex flex-col gap-4 sm:mt-0 fade-in">
                             <p class="text-deutziawhite font-inter text-[18px] font-medium">Follow Us On</p>
                             <div class="flex gap-4 sm:flex-col">
                                 <a href="https://www.instagram.com/init_society/"
